--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Monopoly</title>
-		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 		<link rel="stylesheet" href="./css/monopoly.css">
         <link rel="stylesheet" href="./css/common.css">
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<script src="./js/monopoly.js" type="text/javascript"></script>
+
 		
 	</head>
 	<body>
+    <div class="scores">
+       
+    </div>
         <div class="board">
                 <div id="cell21" class="top left corner game cell free-parking"><div class="content"></div></div>
                 <div id="cell22" class="top game cell available property" data-group="group5"><div class="content"></div><div class="title"></div></div>
@@ -74,8 +79,8 @@
                 <div class="cell"></div>
                 <div id="dice1" class="cell dice clickable shadowed">
                         <div class="dice-dot num2 num3 num4 num5 num6"></div>
-                        <div class="dice-dot right num5 num6"></div><br />
-                        <div class="dice-dot num4 num6"></div>
+                        <div class="dice-dot right num4 num5  num6"></div><br />
+                        <div class="dice-dot  num6"></div>
                         <div class="dice-dot num1 num5 num3"></div>
                         <div class="dice-dot num6"></div><br />
                         <div class="dice-dot num4 num5 num6"></div>
@@ -83,9 +88,9 @@
                 </div>
                 <div class="cell"></div>
                 <div id="dice2" class="cell dice clickable shadowed">
-                        <div class="dice-dot num2 num3 num5 num6"></div>
-                        <div class="dice-dot right num4 num5 num6"></div><br />
-                        <div class="dice-dot num4 num6"></div>
+                        <div class="dice-dot num2 num3 num4 num5 num6"></div>
+                        <div class="dice-dot right  num4 num5 num6"></div><br />
+                        <div class="dice-dot num6"></div>
                         <div class="dice-dot num1 num5 num3"></div>
                         <div class="dice-dot num6"></div><br />
                         <div class="dice-dot num4 num5 num6"></div>
@@ -163,7 +168,7 @@
                         <div id="intro" class="popup-page" style="display:none;">
                                 <div class="popup-title">Welcome to Monopoly</div>
                                 <div class="popup-content">Please choose how many players?<br /><input id="num-of-players" type="text"><button class="clickable">START</button><br>
-                                <div class="invalid-error" >Number of players must be between 1 and 4</div></div>
+                                <div class="invalid-error" >Number of players must be between 1 and 6</div></div>
                         </div>
                         <div id="buy" class="popup-page" style="display:none;">
                                 <div class="popup-title">This cell is available for sale!</div>
@@ -198,6 +203,18 @@
                                 <div class="popup-content">
                                         <div id="text-placeholder"></div>
                                         <button id="ok" class="clickable">OK</button>
+                                </div>
+                        </div>
+                        <div id="reroll" class="popup-page" style="display:none;">
+                                <div class="popup-title">Reroll!</div>
+                                <div class="popup-content">Lucky you :)<br />
+                                         <button id="ok" class="clickable">OK</button>
+                                </div>
+                        </div>
+                         <div id="lost" class="popup-page" style="display:none;">
+                                <div class="popup-title">You lost!</div>
+                                <div class="popup-content">You will be forcefully removed from the game.<br />
+                                         <button id="ok" class="clickable">OK</button>
                                 </div>
                         </div>
                 </div>
